# data-cleaner-ml

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  TUTORIAL.md  TUTORIAL_FA.md  example_inference.py  example_train.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
clean_data_ml/: __init__.py  __main__.py  auto_scaler.py  cleaner.py  plotting.py  stats.py
data_cleaner/: __init__.py  __main__.py  auto_scaler.py  cleaner.py  plotting.py  stats.py
tests/: conftest.py  test_auto_scaler.py  test_cleaner.py  test_plotting.py  test_stats.py
